--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/temp_gen.cpython-38.pyc
 __pycache__/verify.cpython-38.pyc
 __pycache__/create_acc.cpython-38.pyc
 __pycache__/functions.cpython-38.pyc
+Drivers/__pycache__/__init__.cpython-38.pyc
