--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ pack/__pycache__/create_acc.cpython-38.pyc
 pack/__pycache__/functions.cpython-38.pyc
 pack/__pycache__/verify.cpython-38.pyc
 pack/__pycache__/temp_gen.cpython-38.pyc
+Drivers/chromedriver.exe
+.gitignore
+pack/__pycache__/vers.cpython-38.pyc
