--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ pack/__pycache__/functions.cpython-38.pyc
 pack/__pycache__/verify.cpython-38.pyc
 pack/__pycache__/temp_gen.cpython-38.pyc
 Drivers/chromedriver.exe
-.gitignore
 pack/__pycache__/vers.cpython-38.pyc
+chromedriver.exe
